--- a/eShop.MVC/eShop.MVC.csproj
+++ b/eShop.MVC/eShop.MVC.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\ProfileImage\**" />
+    <Content Remove="wwwroot\ProfileImage\**" />
+    <EmbeddedResource Remove="wwwroot\ProfileImage\**" />
+    <None Remove="wwwroot\ProfileImage\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
