--- a/src/eShop.BLL/eShop.BLL.csproj
+++ b/src/eShop.BLL/eShop.BLL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -25,4 +25,11 @@
     <Folder Include="Helper\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>eShop.BLL.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
+	
 </Project>
