--- a/src/eShop.MVC/appsettings.Development.json
+++ b/src/eShop.MVC/appsettings.Development.json
@@ -2,7 +2,21 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetine": "Information",
+      "Microsoft.EntityFrameworkCore": "None"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //Relational DataBase
+    "DefaultConnection": "Data Source=.;Initial Catalog=eShop;Trusted_Connection=true;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True"
+  },
+  "PhotoSettings": {
+    "DestinationFolder": "wwwroot/ProfileImage",
+    "MaxFileSizeBytes": 10485760,
+    "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif" ],
+    "AllowedContentTypes": [ "image/jpeg", "image/png", "image/gif" ]
+  },
+  "EnableRequestResponseLogging": true
 }
