adding ManageRoles controller and configure repo layer for handle roles request for data layer

--- a/src/eShop.MVC/eShop.MVC.csproj
+++ b/src/eShop.MVC/eShop.MVC.csproj
@@ -35,4 +35,8 @@
     <ProjectReference Include="..\eShop.BLL\eShop.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\Error\" />
+  </ItemGroup>
+
 </Project>
