--- a/src/eShop.MVC/appsettings.Development.json
+++ b/src/eShop.MVC/appsettings.Development.json
@@ -9,8 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //Relational DataBase
-    "DefaultConnection": "Data Source=.;Initial Catalog=eShop;Trusted_Connection=true;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=localhost;Database=eShop;User Id=sa;Password=StrongPassword2002;TrustServerCertificate=true;"
   },
   "PhotoSettings": {
     "DestinationFolder": "wwwroot/ProfileImage",
