--- a/src/eShop.Core/eShop.Core.csproj
+++ b/src/eShop.Core/eShop.Core.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http.Features">
+      <HintPath>..\..\..\..\..\..\..\..\..\home\abdullah\.nuget\packages\microsoft.aspnetcore.http.features\2.3.0\lib\netstandard2.0\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
