--- a/src/eShop.MVC/eShop.MVC.csproj
+++ b/src/eShop.MVC/eShop.MVC.csproj
@@ -29,6 +29,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="NToastNotify" Version="8.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.4" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="8.2.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,6 +39,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Checkout\Controllers\" />
+    <Folder Include="Areas\PromoCode\Views\" />
     <Folder Include="wwwroot\css\Error\" />
   </ItemGroup>
 
