Disable specific paths for push events
Commented out the paths section in the workflow.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,9 +5,9 @@ name: .NET
 on:
   push:
     branches: [ "master" ]
-    paths: 
-      - "src/**"
-      - "tests/**"
+    #paths: 
+     # - "src/**"
+      #- "tests/**"
     
 jobs:
   build:
