--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,11 +3,12 @@
 name: .NET
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "master" ]
-    #paths: 
-     # - "src/**"
-      #- "tests/**"
+    paths: 
+      - "src/**"
+      - "tests/**"
     
 jobs:
   build:
