--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,7 @@ jobs:
       run: dotnet build --no-restore
   test:
     runs-on: ubuntu-latest
+    needs: build 
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
